--- a/D3DEngine/D3DEngine.vcxproj.filters
+++ b/D3DEngine/D3DEngine.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="TestScene.h">
       <Filter>Test</Filter>
     </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -90,6 +93,9 @@
     </ClCompile>
     <ClCompile Include="TestScene.cpp">
       <Filter>Test</Filter>
+    </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
